--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<title></title>
-	<meta name="viewport" content="width=divise-width, initial-scale=1">
+	<meta name="viewport" content="width=divice-width, initial-scale=1">
 	 <link rel="stylesheet" type="text/css" href="styles/navbar.css">
 	 <link rel="stylesheet" type="text/css" href="styles/homepage.css">
 </head>
